adjust layout for avoiding login text overlapping

--- a/src/styles/components/CapitalMainWidget.module.css
+++ b/src/styles/components/CapitalMainWidget.module.css
@@ -27,11 +27,21 @@
   margin-bottom: 0.5rem;
 }
 
+@media (max-width: 1200px) {
+  .rightRegionLyt {
+    margin-top: 2rem;
+  }
+}
+
 @media (max-width: 768px) {
   .mainWidgetLyt {
     flex-direction: column;
     align-items: center;
     width: 100%;
+    margin-top: 3rem;
+  }
+  .rightRegionLyt {
+    margin-top: 0;
   }
 }
 
